--- a/main.tex
+++ b/main.tex
@@ -295,7 +295,7 @@
 %\def\erfc{{\normalfont\text{erfc}}}
 %\def\erf{{\normalfont\text{erf}}}
 %% Fix formatting of \neq with mathastext
-%\def\neq{\not\kern0.2ex=}
+\def\neq{\not\kern0.2ex=}
 %% Text stuff
 %\def\AA{\text{\oldring{A}}}
 %\def\ZIF8{\mbox{ZIF-8}}
